Details
-
Bug
-
Status: Resolved
-
Major
-
Resolution: Fixed
-
None
-
Python version : 3.6.5
Pyarrow version : 0.10.0
Description
Git issue LInk : https://github.com/apache/arrow/issues/2627
I want to cast pyarrow table column from decimal(38,4) to int64.
col.cast(pa.int64())
Error:
File "pyarrow/table.pxi", line 443, in pyarrow.lib.Column.cast
File "pyarrow/error.pxi", line 89, in pyarrow.lib.check_status
pyarrow.lib.ArrowNotImplementedError: No cast implemented from decimal(38, 4) to int64
Python version : 3.6.5
Pyarrow version : 0.10.0
is it not implemented yet or I am not using it correctly? If not implemented yet, then any work around to cast columns?
Attachments
Issue Links
- is related to
-
ARROW-8237 [Python] Review Developer build instructions for conda and non-conda users
-
- Resolved
-
- supercedes
-
ARROW-6990 [C++] Support casting between decimal types with compatible precision/scales
-
- Closed
-
- links to