ARROW-3329 [C++] Added casts Decimal128 to Decimal128 and Decimal128 to Int64